--- a/api/releases.json
+++ b/api/releases.json
@@ -1,22 +1,22 @@
 {
-	"render_by_guide_track": {
-		"version": "2.0.0",
-		"url": "https://another.url",
-		"compatibleHosts": [
-			"DaVinci Resolve",
-			"DaVinci Resolve Studio",
-			"Fusion Studio"
-		],
-		"requiredHostVersion": "18.1.4"
-	},
-	"go_to_next_black_hole": {
-		"version": "1.2.3",
-		"url": "https://the.url",
-		"compatibleHosts": [
-			"DaVinci Resolve",
-			"DaVinci Resolve Studio",
-			"Fusion Studio"
-		],
-		"requiredHostVersion": "18.1.4"
-	}
+  "go_to_next_black_hole": {
+    "compatibleHosts": [
+      "DaVinci Resolve",
+      "DaVinci Resolve Studio",
+      "Fusion Studio"
+    ],
+    "requiredHostVersion": "18.1.4",
+    "url": "https://the.url",
+    "version": "1.2.3"
+  },
+  "render_by_guide_track": {
+    "compatibleHosts": [
+      "DaVinci Resolve",
+      "DaVinci Resolve Studio",
+      "Fusion Studio"
+    ],
+    "requiredHostVersion": "18.1.4",
+    "url": "https://another.url",
+    "version": "2.0.0"
+  }
 }
